--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,7 +7,6 @@
     <th>T</th>
     <th>C</th>
     <th>G</th>
-    <th>User</th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,12 +14,11 @@
 
 <% @tasks.each do |task| %>
   <tr>
-    <td><%= truncate(task.sequence) %></td>
+    <td><%= link_to task.title,task %></td>
     <td><%= task.a %></td>
     <td><%= task.t %></td>
     <td><%= task.c %></td>
     <td><%= task.g %></td>
-    <td><%= task.user_id %></td>
     <td><%= link_to 'Show', task %></td>
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
     <td><%= link_to 'Destroy', task, confirm: 'Are you sure?', method: :delete %></td>
