--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -20,6 +20,8 @@
     <td><%= task.c %></td>
     <td><%= task.g %></td>
     <td><%= link_to 'Show', task %></td>
+    <td><%= link_to 'Revert', revert_task_path(task),method:'put' %></td>
+    <td><%= link_to 'Duplicate', duplicate_task_path(task),method:'put' %></td>
     <td><%= link_to 'Edit', edit_task_path(task) %></td>
     <td><%= link_to 'Destroy', task, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
